--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .container {
   width: 800px;
-  height: 100vh;
+  height: 600px;
   margin: auto;
   background-image: url(assets/img/circus.jpg);
   background-repeat: no-repeat;
